// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Separator > renders with as correctly 1`] = `"<span data-orientation="horizontal" role="separator" data-slot="root"><div data-slot="border" class=""></div><!--v-if--></span>"`;

exports[`Separator > renders with class correctly 1`] = `
"<div data-orientation="horizontal" role="separator" data-slot="root" class="flex-row-reverse">
  <div data-slot="border" class=""></div>
  <!--v-if-->
</div>"
`;

exports[`Separator > renders with color primary correctly 1`] = `
"<div data-orientation="horizontal" role="separator" data-slot="root">
  <div data-slot="border" class=""></div>
  <!--v-if-->
</div>"
`;

exports[`Separator > renders with decorative correctly 1`] = `
"<div data-orientation="horizontal" role="none" data-slot="root">
  <div data-slot="border" class=""></div>
  <!--v-if-->
</div>"
`;

exports[`Separator > renders with icon correctly 1`] = `
"<div data-orientation="horizontal" role="separator" data-slot="root">
  <div data-slot="border" class=""></div>
  <div data-slot="container" class=""><span class="iconify i-lucide:image" aria-hidden="true" data-slot="icon"></span></div>
  <div data-slot="border" class=""></div>
</div>"
`;

exports[`Separator > renders with label correctly 1`] = `
"<div data-orientation="horizontal" role="separator" data-slot="root">
  <div data-slot="border" class=""></div>
  <div data-slot="container" class=""><span data-slot="label" class="">+1</span></div>
  <div data-slot="border" class=""></div>
</div>"
`;

exports[`Separator > renders with orientation vertical correctly 1`] = `
"<div data-orientation="vertical" aria-orientation="vertical" role="separator" data-slot="root">
  <div data-slot="border" class=""></div>
  <!--v-if-->
</div>"
`;

exports[`Separator > renders with pohon correctly 1`] = `
"<div data-orientation="horizontal" role="separator" data-slot="root">
  <div data-slot="border" class=""></div>
  <!--v-if-->
</div>"
`;

exports[`Separator > renders with size lg correctly 1`] = `
"<div data-orientation="horizontal" role="separator" data-slot="root">
  <div data-slot="border" class=""></div>
  <!--v-if-->
</div>"
`;

exports[`Separator > renders with size md correctly 1`] = `
"<div data-orientation="horizontal" role="separator" data-slot="root">
  <div data-slot="border" class=""></div>
  <!--v-if-->
</div>"
`;

exports[`Separator > renders with size sm correctly 1`] = `
"<div data-orientation="horizontal" role="separator" data-slot="root">
  <div data-slot="border" class=""></div>
  <!--v-if-->
</div>"
`;

exports[`Separator > renders with size xl correctly 1`] = `
"<div data-orientation="horizontal" role="separator" data-slot="root">
  <div data-slot="border" class=""></div>
  <!--v-if-->
</div>"
`;

exports[`Separator > renders with size xs correctly 1`] = `
"<div data-orientation="horizontal" role="separator" data-slot="root">
  <div data-slot="border" class=""></div>
  <!--v-if-->
</div>"
`;

exports[`Separator > renders with type dashed correctly 1`] = `
"<div data-orientation="horizontal" role="separator" data-slot="root">
  <div data-slot="border" class=""></div>
  <!--v-if-->
</div>"
`;

exports[`Separator > renders with type dotted correctly 1`] = `
"<div data-orientation="horizontal" role="separator" data-slot="root">
  <div data-slot="border" class=""></div>
  <!--v-if-->
</div>"
`;

exports[`Separator > renders with type solid correctly 1`] = `
"<div data-orientation="horizontal" role="separator" data-slot="root">
  <div data-slot="border" class=""></div>
  <!--v-if-->
</div>"
`;
